# auth8on

./: .env  .gitignore  Cargo.toml
migrations/2021-05-05-095431_jwks/: down.sql  up.sql
src/: config.rs  constants.rs  db.rs  main.rs  scheduler.rs  schema.rs
src/routes/: jwks.rs  login.rs  mod.rs  precheck.rs
src/utils/: jwksmanager.rs  keyrotator.rs  mod.rs
